--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,13 @@
 extends layout
 
+block variables
+  - var title = "Home"
+
 block content
-  h1= title
-  p Welcome to #{title}
+  h2.text-center Express App
+
+  .row
+    .offset-sm-2.col-sm-8
+      .jumbotron.text-center.
+        Welcome to the Eat With Friends app! Please visit the
+        #[a(href="https://github.com/janton42/eat-with-friends", title="Eat With Friends on GitHub") GitHub page] to learn more.
