--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,10 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-
-  div
-   a(href="login") Log in
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/logout") Logout
